docs/handbook/server/k8s/backup/k8s/yml/cluster-loadbalancing/default-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
spec:
  backend:
    # This will just loopback to the default backend of GLBC
    serviceName: default-http-backend
    servicePort: 80
